--- a/themes/minimal-project/theme.toml
+++ b/themes/minimal-project/theme.toml
@@ -1,18 +1,18 @@
-name = "OneDly Project"
+name = "Minimal Project"
 license = "MIT"
-licenselink = "https://github.com/cdeck3r/OneDly-Theme/blob/master/LICENSE.md"
-description = "Theme for documenting One-Day-Only (OneDly) projects."
-homepage = "https://github.com/cdeck3r/OneDly-Theme"
-tags = ["documentation", "landing page", "opensource", "single page"]
-features = ["github", "images" ]
+licenselink = "https://github.com/sowmyamanojna/hugo-minimal-project/blob/master/LICENSE.md"
+description = "Theme for documenting Projects."
+homepage = "https://github.com/sowmyamanojna/hugo-minimal-project/"
+tags = ["documentation", "project", "landing page", "opensource", "single page"]
+features = ["github", "images", "inline math"]
 min_version= "0.48"
 
 [author]
-     name = "Christian Decker"
+     name = ""
 
 # If porting an existing theme
 [original]
-    author =  "Omar Abdelhafith"
-    homepage = "https://github.com/nsomar/github-project-landing-page"
-    repo = "https://github.com/nsomar/github-project-landing-page"
+    author =  "Christian Decker"
+    homepage = "https://github.com/cdeck3r/OneDly-Theme"
+    repo = "https://github.com/cdeck3r/OneDly-Theme"
 
