--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,10 +1,10 @@
-baseurl = "https://sowmyamanojna.github.io/hugo-minimal-project/"
+baseurl = "https://example.com/"
 languageCode = "en-us"
 title = "Project Name"
 theme = "minimal-project"
 enableEmoji = true
 toc = true
-googleAnalytics = "UA-175587743-2"
+googleAnalytics = ""
 
 # Configure the Markdown renderer.
 [markup]
